--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -120,9 +120,11 @@
     .Navbar__toggle,
     .closebtn {
         display: none;
+        z-index: 9;
 
         .bar {
             display: none;
+            z-index: 8;
         }
     }
 
@@ -147,4 +149,15 @@
         }
     }
 
+}
+
+.notification{
+    width: 30px;
+    height: 20px;
+    background: $primary-color;
+    border-radius: 10px;
+    margin-top: -10px;
+    margin-left: -10px;
+    display: none;
+    
 }
