--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -86,6 +86,9 @@
 
 .cart-modal-toggle{
     display:block;
+    box-shadow: 3px 9px 30px 3px rgba(182,188,200,0.65);
+-webkit-box-shadow: 3px 9px 30px 3px rgba(182,188,200,0.65);
+-moz-box-shadow: 3px 9px 30px 3px rgba(182,188,200,0.65);
 
 }
 .cart-item {
